Adding edit profile route and and user service function
